# IBSLib

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.bak  CMakeLists.txt  DemoCoulombLog  DemoIBS  DemoIntegrators  DemoNumericFunctions  DemoODE  DemoRadDamping  IBSLib  IBSLib.pc  Makefile  ODE_Output_test.csv  ODE_test_output_bjorken_mtingwa.csv  ODE_test_output_bjorken_mtingwa2.csv  ODE_test_output_bjorken_mtingwatailcut.csv  ODE_test_output_conte_martini_tailcut.csv  ODE_test_output_madx.csv  ODE_test_output_madxtailcut.csv  ODE_test_output_nagaitsev.csv  ODE_test_output_nagaitsevtailcut.csv  ODE_test_output_piwinski_lattice.csv  ODE_test_output_piwinski_latticemodified.csv  ODE_test_output_piwinski_smooth.csv  README.rst  b2_design_lattice_1996.twiss  b2_design_lattice_1996.twiss2  cmake_install.cmake  configure.sh  ibslib_pb.cpp  libtest.cpp  pyibslib.py  pyproject.toml
CoulombLog/: CoulombLogFunctions.cpp  CoulombLogFunctions.hpp
Demos/: DemoCoulombLog.cpp  DemoIBS.cpp  DemoIntegrators.cpp  DemoNumericFunctions.cpp  DemoRadDamping.cpp
Integrators/: Integrators.cpp  Integrators.hpp
Models/: Models.cpp  Models.hpp
NumericFunctions/: NumericFunctions.cpp  NumericFunctions.hpp
ODE/: ODE.cpp  ODE.hpp
OrdDiffEq/: OrdDiffEq.cpp  OrdDiffEq.hpp
RadiationDamping/: RadiationDamping.cpp  RadiationDamping.hpp
Twiss/: Twiss.cpp  Twiss.hpp
docs/presentation/: Presentation.ipynb
tests/: test_cpp_numeric_functions.py  test_cpp_twiss.py
